name:               pipes-network
version:            0.6.0.0
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) Renzo Carbonara 2012-2013, Paolo Capriotti 2012-2012.
author:             Renzo Carbonara
maintainer:         renzocarbonaraλgmail.com
stability:          Experimental
tested-with:        GHC == 7.4.1
homepage:           https://github.com/k0001/pipes-network
bug-reports:        https://github.com/k0001/pipes-network/issues
category:           Pipes, Network
build-type:         Simple
synopsis:           Use network sockets together with the pipes library.
cabal-version:      >=1.8
extra-source-files: README.md PEOPLE NEWS
description:
  Use network sockets together with the @pipes@ library.
  .
  This package is organized using the following namespaces:
  .
  * "Pipes.Network.TCP" exports pipes for using TCP connections in a streaming
  fashion.
  .
  * "Pipes.Network.TCP.Safe" complements "Pipes.Network.TCP" by providing
  functions that allow you to safely establish new TCP connections within
  a pipeline.
  .
  See the @NEWS@ file in the source distribution to learn about any
  important changes between version.

source-repository head
    type: git
    location: git://github.com/k0001/pipes-network.git

library
    hs-source-dirs: src
    build-depends:
        base           (==4.*),
        bytestring     (>=0.9.2.1),
        network,
        network-simple (>=0.3 && <0.4),
        pipes          (>=4.0 && <4.1),
        pipes-safe     (>=2.0 && <2.1),
        transformers   (>=0.2 && <0.4)
    exposed-modules:
        Pipes.Network.TCP
        Pipes.Network.TCP.Safe
    ghc-options: -Wall

test-suite simple
    hs-source-dirs: tests
    main-is: Simple.hs
    type: exitcode-stdio-1.0
    build-depends:
        base < 5,
        bytestring,
        HUnit,
        network,
        pipes-network,
        pipes,
        pipes-safe,
        transformers,
        test-framework,
        test-framework-hunit
