name:               pipes-network
version:            0.6.5
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) Renzo Carbonara 2012-2018, Paolo Capriotti 2012-2012.
author:             Renzo Carbonara
maintainer:         renzocarbonaraλgmail.com
stability:          Experimental
tested-with:        GHC == 8.4.1
homepage:           https://github.com/k0001/pipes-network
bug-reports:        https://github.com/k0001/pipes-network/issues
category:           Pipes, Network
build-type:         Simple
synopsis:           Use network sockets together with the pipes library.
cabal-version:      >=1.8
extra-source-files: README.md PEOPLE changelog.md
description:
  Use network sockets together with the @pipes@ library.
  .
  This package is organized using the following namespaces:
  .
  * "Pipes.Network.TCP" exports pipes and utilities for using TCP connections in
  a streaming fashion.
  .
  * "Pipes.Network.TCP.Safe" subsumes "Pipes.Network.TCP", exporting pipes and
  functions that allow you to safely establish new TCP connections within a
  pipeline using the @pipes-safe@ facilities. You only need to use this module
  if you want to safely acquire and release operating system resources within a
  pipeline.
  .
  See the @changelog@ file in the source distribution to learn about any
  important changes between version.

source-repository head
    type: git
    location: https://github.com/k0001/pipes-network

library
    hs-source-dirs: src
    build-depends:
        base ==4.*,
        bytestring,
        exceptions,
        network,
        network-simple,
        pipes,
        pipes-safe,
        transformers
    exposed-modules:
        Pipes.Network.TCP
        Pipes.Network.TCP.Safe
    ghc-options: -Wall -O2
